--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,353 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@keyframes move {
+  100% {
+    transform: translate3d(0, 0, 1px) rotate(360deg);
+  }
+}
+
+.background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: #3E1E68;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.background span {
+  width: 1vmin;
+  height: 1vmin;
+  border-radius: 1vmin;
+  backface-visibility: hidden;
+  position: absolute;
+  animation: move;
+  animation-duration: 15;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+
+.background span:nth-child(0) {
+  color: #583C87;
+  top: 13%;
+  left: 3%;
+  animation-duration: 226s;
+  animation-delay: -345s;
+  transform-origin: 10vw -15vh;
+  box-shadow: 2vmin 0 0.727928862490137vmin currentColor;
+}
+
+.background span:nth-child(1) {
+  color: #FFACAC;
+  top: 37%;
+  left: 53%;
+  animation-duration: 149s;
+  animation-delay: -169s;
+  transform-origin: -1vw 18vh;
+  box-shadow: -2vmin 0 0.5019044734625344vmin currentColor;
+}
+
+.background span:nth-child(2) {
+  color: #583C87;
+  top: 62%;
+  left: 11%;
+  animation-duration: 258s;
+  animation-delay: -126s;
+  transform-origin: 13vw 0vh;
+  box-shadow: 2vmin 0 0.8057618488955816vmin currentColor;
+}
+
+.background span:nth-child(3) {
+  color: #FFACAC;
+  top: 46%;
+  left: 95%;
+  animation-duration: 122s;
+  animation-delay: -13s;
+  transform-origin: -9vw 1vh;
+  box-shadow: -2vmin 0 0.5977450099973782vmin currentColor;
+}
+
+.background span:nth-child(4) {
+  color: #583C87;
+  top: 90%;
+  left: 25%;
+  animation-duration: 238s;
+  animation-delay: -228s;
+  transform-origin: 10vw -21vh;
+  box-shadow: -2vmin 0 1.0366676339200824vmin currentColor;
+}
+
+.background span:nth-child(5) {
+  color: #583C87;
+  top: 92%;
+  left: 37%;
+  animation-duration: 213s;
+  animation-delay: -285s;
+  transform-origin: -10vw -1vh;
+  box-shadow: -2vmin 0 0.9274662281066328vmin currentColor;
+}
+
+.background span:nth-child(6) {
+  color: #E45A84;
+  top: 90%;
+  left: 48%;
+  animation-duration: 26s;
+  animation-delay: -236s;
+  transform-origin: -2vw -23vh;
+  box-shadow: 2vmin 0 0.8718888670217679vmin currentColor;
+}
+
+.background span:nth-child(7) {
+  color: #E45A84;
+  top: 76%;
+  left: 47%;
+  animation-duration: 60s;
+  animation-delay: -55s;
+  transform-origin: -7vw -13vh;
+  box-shadow: -2vmin 0 0.9962279630577919vmin currentColor;
+}
+
+.background span:nth-child(8) {
+  color: #FFACAC;
+  top: 16%;
+  left: 42%;
+  animation-duration: 346s;
+  animation-delay: -142s;
+  transform-origin: -16vw 4vh;
+  box-shadow: -2vmin 0 0.9338997686445534vmin currentColor;
+}
+
+.background span:nth-child(9) {
+  color: #E45A84;
+  top: 15%;
+  left: 24%;
+  animation-duration: 67s;
+  animation-delay: -8s;
+  transform-origin: 1vw 24vh;
+  box-shadow: 2vmin 0 0.3591945631722364vmin currentColor;
+}
+
+.background span:nth-child(10) {
+  color: #FFACAC;
+  top: 12%;
+  left: 6%;
+  animation-duration: 48s;
+  animation-delay: -203s;
+  transform-origin: 21vw -17vh;
+  box-shadow: -2vmin 0 1.0759505181764841vmin currentColor;
+}
+
+.background span:nth-child(11) {
+  color: #E45A84;
+  top: 95%;
+  left: 20%;
+  animation-duration: 131s;
+  animation-delay: -190s;
+  transform-origin: 3vw -3vh;
+  box-shadow: 2vmin 0 1.1098496011545869vmin currentColor;
+}
+
+.background span:nth-child(12) {
+  color: #583C87;
+  top: 53%;
+  left: 53%;
+  animation-duration: 174s;
+  animation-delay: -169s;
+  transform-origin: 22vw 14vh;
+  box-shadow: 2vmin 0 0.3007333453512737vmin currentColor;
+}
+
+.background span:nth-child(13) {
+  color: #FFACAC;
+  top: 23%;
+  left: 60%;
+  animation-duration: 234s;
+  animation-delay: -17s;
+  transform-origin: -23vw -4vh;
+  box-shadow: -2vmin 0 0.7445874297867621vmin currentColor;
+}
+
+.background span:nth-child(14) {
+  color: #583C87;
+  top: 22%;
+  left: 15%;
+  animation-duration: 147s;
+  animation-delay: -109s;
+  transform-origin: -24vw 2vh;
+  box-shadow: -2vmin 0 1.0343408889150087vmin currentColor;
+}
+
+.background span:nth-child(15) {
+  color: #E45A84;
+  top: 10%;
+  left: 72%;
+  animation-duration: 252s;
+  animation-delay: -287s;
+  transform-origin: 24vw -22vh;
+  box-shadow: 2vmin 0 0.8253589158311856vmin currentColor;
+}
+
+.background span:nth-child(16) {
+  color: #E45A84;
+  top: 62%;
+  left: 8%;
+  animation-duration: 303s;
+  animation-delay: -172s;
+  transform-origin: -8vw 4vh;
+  box-shadow: 2vmin 0 0.8292017369160849vmin currentColor;
+}
+
+.background span:nth-child(17) {
+  color: #583C87;
+  top: 55%;
+  left: 31%;
+  animation-duration: 137s;
+  animation-delay: -18s;
+  transform-origin: 15vw -12vh;
+  box-shadow: -2vmin 0 0.8251993776203586vmin currentColor;
+}
+
+.background span:nth-child(18) {
+  color: #583C87;
+  top: 11%;
+  left: 14%;
+  animation-duration: 337s;
+  animation-delay: -15s;
+  transform-origin: -13vw -23vh;
+  box-shadow: 2vmin 0 0.7186786253962978vmin currentColor;
+}
+
+.background span:nth-child(19) {
+  color: #FFACAC;
+  top: 8%;
+  left: 16%;
+  animation-duration: 296s;
+  animation-delay: -121s;
+  transform-origin: -10vw 14vh;
+  box-shadow: -2vmin 0 0.8706890453275726vmin currentColor;
+}
+
+.background span:nth-child(20) {
+  color: #FFACAC;
+  top: 72%;
+  left: 28%;
+  animation-duration: 95s;
+  animation-delay: -270s;
+  transform-origin: 20vw -4vh;
+  box-shadow: 2vmin 0 0.4656743694616412vmin currentColor;
+}
+
+.background span:nth-child(21) {
+  color: #583C87;
+  top: 12%;
+  left: 52%;
+  animation-duration: 211s;
+  animation-delay: -206s;
+  transform-origin: -23vw -17vh;
+  box-shadow: -2vmin 0 0.6741952066453882vmin currentColor;
+}
+
+.background span:nth-child(22) {
+  color: #E45A84;
+  top: 8%;
+  left: 30%;
+  animation-duration: 159s;
+  animation-delay: -319s;
+  transform-origin: 15vw 17vh;
+  box-shadow: -2vmin 0 0.44208767177882624vmin currentColor;
+}
+
+.background span:nth-child(23) {
+  color: #583C87;
+  top: 58%;
+  left: 4%;
+  animation-duration: 289s;
+  animation-delay: -323s;
+  transform-origin: 21vw -24vh;
+  box-shadow: -2vmin 0 1.1213530582250573vmin currentColor;
+}
+
+.background span:nth-child(24) {
+  color: #FFACAC;
+  top: 71%;
+  left: 51%;
+  animation-duration: 123s;
+  animation-delay: -325s;
+  transform-origin: -21vw -4vh;
+  box-shadow: -2vmin 0 0.6143002692745587vmin currentColor;
+}
+
+.background span:nth-child(25) {
+  color: #583C87;
+  top: 37%;
+  left: 26%;
+  animation-duration: 171s;
+  animation-delay: -341s;
+  transform-origin: -1vw 0vh;
+  box-shadow: -2vmin 0 0.6852566511849572vmin currentColor;
+}
+
+.background span:nth-child(26) {
+  color: #FFACAC;
+  top: 82%;
+  left: 47%;
+  animation-duration: 255s;
+  animation-delay: -305s;
+  transform-origin: -21vw 15vh;
+  box-shadow: 2vmin 0 0.7352565090721916vmin currentColor;
+}
+
+.background span:nth-child(27) {
+  color: #E45A84;
+  top: 53%;
+  left: 85%;
+  animation-duration: 211s;
+  animation-delay: -118s;
+  transform-origin: 16vw -20vh;
+  box-shadow: 2vmin 0 1.0809867447922152vmin currentColor;
+}
+
+.background span:nth-child(28) {
+  color: #583C87;
+  top: 90%;
+  left: 25%;
+  animation-duration: 340s;
+  animation-delay: -217s;
+  transform-origin: 12vw 18vh;
+  box-shadow: 2vmin 0 0.5133568209110324vmin currentColor;
+}
+
+.background span:nth-child(29) {
+  color: #FFACAC;
+  top: 23%;
+  left: 68%;
+  animation-duration: 35s;
+  animation-delay: -294s;
+  transform-origin: -10vw -20vh;
+  box-shadow: 2vmin 0 0.296052138541842vmin currentColor;
+}
+
+.background span:nth-child(30) {
+  color: #FFACAC;
+  top: 43%;
+  left: 16%;
+  animation-duration: 315s;
+  animation-delay: -191s;
+  transform-origin: 5vw -2vh;
+  box-shadow: -2vmin 0 0.5706607957708973vmin currentColor;
+}
+
+.background span:nth-child(31) {
+  color: #E45A84;
+  top: 52%;
+  left: 94%;
+  animation-duration: 348s;
+  animation-delay: -190s;
+  transform-origin: 1vw 13vh;
+  box-shadow: 2vmin 0 0.7684611977230951vmin currentColor;
+}
