Add animated background CSS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,7 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+/* Animated background CSS */
 @keyframes move {
   100% {
     transform: translate3d(0, 0, 1px) rotate(360deg);
