--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@ body {
 /* Animated background CSS */
 @keyframes move {
   100% {
-    transform: translate3d(0, 0, 1px) rotate(360deg);
+      transform: translate3d(0, 0, 1px) rotate(360deg);
   }
 }
 
@@ -39,7 +39,7 @@ body {
   height: 100vh;
   top: 0;
   left: 0;
-  background: #3E1E68;
+  background: #181616;
   overflow: hidden;
   z-index: -1;
 }
@@ -51,328 +51,261 @@ body {
   backface-visibility: hidden;
   position: absolute;
   animation: move;
-  animation-duration: 15;
+  animation-duration: 22;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
 
 
 .background span:nth-child(0) {
-  color: #583C87;
-  top: 13%;
-  left: 3%;
-  animation-duration: 226s;
-  animation-delay: -345s;
-  transform-origin: 10vw -15vh;
-  box-shadow: 2vmin 0 0.727928862490137vmin currentColor;
+  color: #f1fec6;
+    top: 8%;
+    left: 7%;
+    animation-duration: 186s;
+    animation-delay: -122s;
+    transform-origin: -22vw -17vh;
+    box-shadow: 2vmin 0 1.1358537431373181vmin currentColor;
 }
-
 .background span:nth-child(1) {
-  color: #FFACAC;
-  top: 37%;
-  left: 53%;
-  animation-duration: 149s;
-  animation-delay: -169s;
-  transform-origin: -1vw 18vh;
-  box-shadow: -2vmin 0 0.5019044734625344vmin currentColor;
+  color: #ffd6cc;
+    top: 8%;
+    left: 34%;
+    animation-duration: 254s;
+    animation-delay: -194s;
+    transform-origin: 11vw 6vh;
+    box-shadow: -2vmin 0 0.5234899992688162vmin currentColor;
 }
-
 .background span:nth-child(2) {
-  color: #583C87;
-  top: 62%;
-  left: 11%;
-  animation-duration: 258s;
-  animation-delay: -126s;
-  transform-origin: 13vw 0vh;
-  box-shadow: 2vmin 0 0.8057618488955816vmin currentColor;
+  color: #ff3a20;
+    top: 6%;
+    left: 49%;
+    animation-duration: 94s;
+    animation-delay: -163s;
+    transform-origin: 25vw -4vh;
+    box-shadow: 2vmin 0 1.0134388630137052vmin currentColor;
 }
-
 .background span:nth-child(3) {
-  color: #FFACAC;
-  top: 46%;
-  left: 95%;
-  animation-duration: 122s;
-  animation-delay: -13s;
-  transform-origin: -9vw 1vh;
-  box-shadow: -2vmin 0 0.5977450099973782vmin currentColor;
+  color: #f1fec6;
+    top: 65%;
+    left: 44%;
+    animation-duration: 128s;
+    animation-delay: -137s;
+    transform-origin: 9vw 7vh;
+    box-shadow: -2vmin 0 0.4370691949228176vmin currentColor;
 }
-
 .background span:nth-child(4) {
-  color: #583C87;
-  top: 90%;
-  left: 25%;
-  animation-duration: 238s;
-  animation-delay: -228s;
-  transform-origin: 10vw -21vh;
-  box-shadow: -2vmin 0 1.0366676339200824vmin currentColor;
+  color: #ffd6cc;
+    top: 5%;
+    left: 95%;
+    animation-duration: 271s;
+    animation-delay: -148s;
+    transform-origin: -23vw -11vh;
+    box-shadow: -2vmin 0 0.9247439998663782vmin currentColor;
 }
-
 .background span:nth-child(5) {
-  color: #583C87;
-  top: 92%;
-  left: 37%;
-  animation-duration: 213s;
-  animation-delay: -285s;
-  transform-origin: -10vw -1vh;
-  box-shadow: -2vmin 0 0.9274662281066328vmin currentColor;
+  color: #f1fec6;
+    top: 84%;
+    left: 13%;
+    animation-duration: 102s;
+    animation-delay: -221s;
+    transform-origin: -17vw 14vh;
+    box-shadow: 2vmin 0 0.2535630328981411vmin currentColor;
 }
-
 .background span:nth-child(6) {
-  color: #E45A84;
-  top: 90%;
-  left: 48%;
-  animation-duration: 26s;
-  animation-delay: -236s;
-  transform-origin: -2vw -23vh;
-  box-shadow: 2vmin 0 0.8718888670217679vmin currentColor;
+  color: #ff3a20;
+    top: 28%;
+    left: 25%;
+    animation-duration: 252s;
+    animation-delay: -176s;
+    transform-origin: -20vw 13vh;
+    box-shadow: -2vmin 0 1.0079626334138236vmin currentColor;
 }
-
 .background span:nth-child(7) {
-  color: #E45A84;
-  top: 76%;
-  left: 47%;
-  animation-duration: 60s;
-  animation-delay: -55s;
-  transform-origin: -7vw -13vh;
-  box-shadow: -2vmin 0 0.9962279630577919vmin currentColor;
+  color: #f1fec6;
+    top: 40%;
+    left: 61%;
+    animation-duration: 160s;
+    animation-delay: -69s;
+    transform-origin: 5vw -14vh;
+    box-shadow: 2vmin 0 1.202021403430082vmin currentColor;
 }
-
 .background span:nth-child(8) {
-  color: #FFACAC;
-  top: 16%;
-  left: 42%;
-  animation-duration: 346s;
-  animation-delay: -142s;
-  transform-origin: -16vw 4vh;
-  box-shadow: -2vmin 0 0.9338997686445534vmin currentColor;
+  color: #ffd6cc;
+    top: 77%;
+    left: 1%;
+    animation-duration: 230s;
+    animation-delay: -161s;
+    transform-origin: -11vw 3vh;
+    box-shadow: -2vmin 0 1.2056439193384672vmin currentColor;
 }
-
 .background span:nth-child(9) {
-  color: #E45A84;
-  top: 15%;
-  left: 24%;
-  animation-duration: 67s;
-  animation-delay: -8s;
-  transform-origin: 1vw 24vh;
-  box-shadow: 2vmin 0 0.3591945631722364vmin currentColor;
+  color: #ff3a20;
+    top: 16%;
+    left: 90%;
+    animation-duration: 142s;
+    animation-delay: -96s;
+    transform-origin: -10vw -21vh;
+    box-shadow: 2vmin 0 1.0201289192999634vmin currentColor;
 }
-
 .background span:nth-child(10) {
-  color: #FFACAC;
+  color: #ffd6cc;
   top: 12%;
-  left: 6%;
-  animation-duration: 48s;
-  animation-delay: -203s;
-  transform-origin: 21vw -17vh;
-  box-shadow: -2vmin 0 1.0759505181764841vmin currentColor;
-}
-
-.background span:nth-child(11) {
-  color: #E45A84;
-  top: 95%;
-  left: 20%;
-  animation-duration: 131s;
-  animation-delay: -190s;
-  transform-origin: 3vw -3vh;
-  box-shadow: 2vmin 0 1.1098496011545869vmin currentColor;
-}
-
-.background span:nth-child(12) {
-  color: #583C87;
-  top: 53%;
-  left: 53%;
-  animation-duration: 174s;
-  animation-delay: -169s;
-  transform-origin: 22vw 14vh;
-  box-shadow: 2vmin 0 0.3007333453512737vmin currentColor;
-}
-
-.background span:nth-child(13) {
-  color: #FFACAC;
-  top: 23%;
-  left: 60%;
-  animation-duration: 234s;
-  animation-delay: -17s;
-  transform-origin: -23vw -4vh;
-  box-shadow: -2vmin 0 0.7445874297867621vmin currentColor;
-}
-
-.background span:nth-child(14) {
-  color: #583C87;
-  top: 22%;
-  left: 15%;
-  animation-duration: 147s;
-  animation-delay: -109s;
-  transform-origin: -24vw 2vh;
-  box-shadow: -2vmin 0 1.0343408889150087vmin currentColor;
-}
-
-.background span:nth-child(15) {
-  color: #E45A84;
-  top: 10%;
-  left: 72%;
-  animation-duration: 252s;
-  animation-delay: -287s;
-  transform-origin: 24vw -22vh;
-  box-shadow: 2vmin 0 0.8253589158311856vmin currentColor;
-}
-
-.background span:nth-child(16) {
-  color: #E45A84;
-  top: 62%;
-  left: 8%;
-  animation-duration: 303s;
-  animation-delay: -172s;
-  transform-origin: -8vw 4vh;
-  box-shadow: 2vmin 0 0.8292017369160849vmin currentColor;
-}
-
-.background span:nth-child(17) {
-  color: #583C87;
-  top: 55%;
-  left: 31%;
-  animation-duration: 137s;
-  animation-delay: -18s;
-  transform-origin: 15vw -12vh;
-  box-shadow: -2vmin 0 0.8251993776203586vmin currentColor;
-}
-
-.background span:nth-child(18) {
-  color: #583C87;
-  top: 11%;
-  left: 14%;
-  animation-duration: 337s;
-  animation-delay: -15s;
-  transform-origin: -13vw -23vh;
-  box-shadow: 2vmin 0 0.7186786253962978vmin currentColor;
-}
-
-.background span:nth-child(19) {
-  color: #FFACAC;
-  top: 8%;
-  left: 16%;
-  animation-duration: 296s;
-  animation-delay: -121s;
-  transform-origin: -10vw 14vh;
-  box-shadow: -2vmin 0 0.8706890453275726vmin currentColor;
-}
-
-.background span:nth-child(20) {
-  color: #FFACAC;
-  top: 72%;
   left: 28%;
-  animation-duration: 95s;
-  animation-delay: -270s;
-  transform-origin: 20vw -4vh;
-  box-shadow: 2vmin 0 0.4656743694616412vmin currentColor;
+    animation-duration: 93s;
+    animation-delay: -47s;
+    transform-origin: -21vw -4vh;
+    box-shadow: -2vmin 0 0.3220191476253218vmin currentColor;
 }
-
+.background span:nth-child(11) {
+  color: #ffd6cc;
+    top: 85%;
+    left: 15%;
+    animation-duration: 272s;
+    animation-delay: -123s;
+    transform-origin: -5vw 5vh;
+    box-shadow: -2vmin 0 0.3587827588859591vmin currentColor;
+}
+.background span:nth-child(12) {
+  color: #ffd6cc;
+    top: 78%;
+    left: 19%;
+    animation-duration: 70s;
+    animation-delay: -222s;
+    transform-origin: -15vw -19vh;
+    box-shadow: -2vmin 0 1.1018496649059017vmin currentColor;
+}
+.background span:nth-child(13) {
+  color: #f1fec6;
+    top: 36%;
+    left: 100%;
+    animation-duration: 202s;
+    animation-delay: -159s;
+    transform-origin: 9vw -9vh;
+    box-shadow: 2vmin 0 0.7469845543163314vmin currentColor;
+}
+.background span:nth-child(14) {
+  color: #f1fec6;
+    top: 93%;
+    left: 16%;
+    animation-duration: 137s;
+    animation-delay: -194s;
+    transform-origin: -3vw 17vh;
+    box-shadow: -2vmin 0 1.1866166989871723vmin currentColor;
+}
+.background span:nth-child(15) {
+  color: #f1fec6;
+    top: 29%;
+    left: 73%;
+    animation-duration: 30s;
+    animation-delay: -98s;
+    transform-origin: 14vw 8vh;
+    box-shadow: -2vmin 0 0.8443269698751124vmin currentColor;
+}
+.background span:nth-child(16) {
+  color: #f1fec6;
+    top: 93%;
+    left: 91%;
+    animation-duration: 34s;
+    animation-delay: -262s;
+    transform-origin: -18vw 25vh;
+    box-shadow: -2vmin 0 0.46310817147283845vmin currentColor;
+}
+.background span:nth-child(17) {
+  color: #f1fec6;
+    top: 61%;
+    left: 62%;
+    animation-duration: 38s;
+    animation-delay: -42s;
+    transform-origin: 21vw -22vh;
+    box-shadow: 2vmin 0 0.4867428343226654vmin currentColor;
+}
+.background span:nth-child(18) {
+  color: #ff3a20;
+    top: 31%;
+    left: 81%;
+    animation-duration: 269s;
+    animation-delay: -19s;
+    transform-origin: -24vw 15vh;
+    box-shadow: 2vmin 0 0.8670013344646912vmin currentColor;
+}
+.background span:nth-child(19) {
+  color: #f1fec6;
+    top: 36%;
+    left: 76%;
+    animation-duration: 34s;
+    animation-delay: -44s;
+    transform-origin: -16vw -17vh;
+    box-shadow: 2vmin 0 0.6841725569411359vmin currentColor;
+}
+.background span:nth-child(20) {
+  color: #f1fec6;
+    top: 24%;
+    left: 79%;
+    animation-duration: 237s;
+    animation-delay: -108s;
+    transform-origin: -12vw 9vh;
+    box-shadow: -2vmin 0 0.28985177107405025vmin currentColor;
+}
 .background span:nth-child(21) {
-  color: #583C87;
-  top: 12%;
-  left: 52%;
-  animation-duration: 211s;
-  animation-delay: -206s;
-  transform-origin: -23vw -17vh;
-  box-shadow: -2vmin 0 0.6741952066453882vmin currentColor;
+  color: #ffd6cc;
+    top: 14%;
+    left: 96%;
+    animation-duration: 195s;
+    animation-delay: -269s;
+    transform-origin: -7vw 14vh;
+    box-shadow: -2vmin 0 0.7641513490661669vmin currentColor;
 }
-
 .background span:nth-child(22) {
-  color: #E45A84;
-  top: 8%;
-  left: 30%;
-  animation-duration: 159s;
-  animation-delay: -319s;
-  transform-origin: 15vw 17vh;
-  box-shadow: -2vmin 0 0.44208767177882624vmin currentColor;
+  color: #ff3a20;
+    top: 70%;
+    left: 9%;
+    animation-duration: 181s;
+    animation-delay: -205s;
+    transform-origin: 9vw 3vh;
+    box-shadow: -2vmin 0 0.8291078465140085vmin currentColor;
 }
-
 .background span:nth-child(23) {
-  color: #583C87;
-  top: 58%;
-  left: 4%;
-  animation-duration: 289s;
-  animation-delay: -323s;
-  transform-origin: 21vw -24vh;
-  box-shadow: -2vmin 0 1.1213530582250573vmin currentColor;
+  color: #ffd6cc;
+    top: 74%;
+    left: 30%;
+    animation-duration: 207s;
+    animation-delay: -225s;
+    transform-origin: 17vw -23vh;
+    box-shadow: 2vmin 0 1.0300058215985435vmin currentColor;
 }
-
 .background span:nth-child(24) {
-  color: #FFACAC;
-  top: 71%;
-  left: 51%;
-  animation-duration: 123s;
-  animation-delay: -325s;
-  transform-origin: -21vw -4vh;
-  box-shadow: -2vmin 0 0.6143002692745587vmin currentColor;
+  color: #ffd6cc;
+    top: 19%;
+    left: 43%;
+    animation-duration: 121s;
+    animation-delay: -26s;
+    transform-origin: 0vw 4vh;
+    box-shadow: 2vmin 0 1.0291582543716018vmin currentColor;
 }
-
 .background span:nth-child(25) {
-  color: #583C87;
-  top: 37%;
-  left: 26%;
-  animation-duration: 171s;
-  animation-delay: -341s;
-  transform-origin: -1vw 0vh;
-  box-shadow: -2vmin 0 0.6852566511849572vmin currentColor;
+  color: #ff3a20;
+    top: 52%;
+    left: 44%;
+    animation-duration: 86s;
+    animation-delay: -188s;
+    transform-origin: 0vw 15vh;
+    box-shadow: 2vmin 0 0.5760284523473043vmin currentColor;
 }
-
 .background span:nth-child(26) {
-  color: #FFACAC;
-  top: 82%;
-  left: 47%;
-  animation-duration: 255s;
-  animation-delay: -305s;
-  transform-origin: -21vw 15vh;
-  box-shadow: 2vmin 0 0.7352565090721916vmin currentColor;
+  color: #ff3a20;
+    top: 76%;
+    left: 77%;
+    animation-duration: 162s;
+    animation-delay: -235s;
+    transform-origin: 16vw 13vh;
+    box-shadow: 2vmin 0 0.5470191529128043vmin currentColor;
 }
-
 .background span:nth-child(27) {
-  color: #E45A84;
-  top: 53%;
-  left: 85%;
-  animation-duration: 211s;
-  animation-delay: -118s;
-  transform-origin: 16vw -20vh;
-  box-shadow: 2vmin 0 1.0809867447922152vmin currentColor;
-}
-
-.background span:nth-child(28) {
-  color: #583C87;
-  top: 90%;
-  left: 25%;
-  animation-duration: 340s;
-  animation-delay: -217s;
-  transform-origin: 12vw 18vh;
-  box-shadow: 2vmin 0 0.5133568209110324vmin currentColor;
-}
-
-.background span:nth-child(29) {
-  color: #FFACAC;
-  top: 23%;
-  left: 68%;
-  animation-duration: 35s;
-  animation-delay: -294s;
-  transform-origin: -10vw -20vh;
-  box-shadow: 2vmin 0 0.296052138541842vmin currentColor;
-}
-
-.background span:nth-child(30) {
-  color: #FFACAC;
-  top: 43%;
-  left: 16%;
-  animation-duration: 315s;
-  animation-delay: -191s;
-  transform-origin: 5vw -2vh;
-  box-shadow: -2vmin 0 0.5706607957708973vmin currentColor;
-}
-
-.background span:nth-child(31) {
-  color: #E45A84;
-  top: 52%;
-  left: 94%;
-  animation-duration: 348s;
-  animation-delay: -190s;
-  transform-origin: 1vw 13vh;
-  box-shadow: 2vmin 0 0.7684611977230951vmin currentColor;
+  color: #ffd6cc;
+    top: 55%;
+    left: 44%;
+    animation-duration: 37s;
+    animation-delay: -109s;
+    transform-origin: 5vw 12vh;
+    box-shadow: -2vmin 0 0.25349177688029334vmin currentColor;
 }
