Update global and form input styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,9 @@
 html * {
   color: #ffffff;
 }
+label {
+  color: black;
+}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
