Add color to list items in globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,9 @@ html * {
 label {
   color: black;
 }
+li {
+  color: black;
+}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
